Follow-up: iOS: Updating input mode should update the software keyboard <https://bugs.webkit.org/show_bug.cgi?id=193565> <rdar://problem/47376334>

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::focusedElementDidChangeInputMode): Fix iOS
Debug builds after r240199 by downcasting `element` to
`HTMLElement` before calling canonicalInputMode().

Canonical link: https://commits.webkit.org/208125@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240203 268f45cc-cd09-0410-ab3c-d52691b4dbfc